--- a/css/ageifrm.css
+++ b/css/ageifrm.css
@@ -10,7 +10,7 @@
     -webkit-flex-wrap: wrap;
 }
 .ifrm_box{
-    margin:0px 20px 40px 0px;
+    margin:0px 10px 40px 10px;
     width: 220px;
     position: relative;
     display: flex;
@@ -69,4 +69,80 @@
 }
 .ifrm_box:hover .ifrm_date{
     font-weight: 600
+}
+@media only screen and (max-width: 540px){
+    .ageifrm_m{
+        justify-content: space-between;
+        -webkit-justify-content: space-between;
+    }
+    .ifrm_box{
+    margin:0px 0px 20px 0px;
+    width: 200px;
+}
+.ifrm_pics{
+    width: 200px;
+    height:180px;
+}
+}
+@media only screen and (max-width: 480px){
+    .ifrm_box{
+    margin:0px 0px 20px 0px;
+    width: 160px;
+}
+.ifrm_pics{
+    width: 160px;
+    height:140px;
+}
+}
+@media only screen and (max-width: 460px){
+    .ageifrm_m{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    display: -webkit-flex;
+    -webkit-justify-content: flex-start;
+    -webkit-flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+}
+    .ifrm_box{
+    margin:0px 0px 10px 0px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    display: -webkit-flex;
+    -webkit-flex-direction: column; 
+}
+.ifrm_pics{
+    width: 100%;
+    height:120px;
+    margin-bottom: 0px;
+}
+    .ifrm_date{
+    font-family: poppins;
+    font-weight: 400;
+    margin:30px 0px 0px 20px;
+    color: rgb(255,255,255);
+    font-size: 18px;
+    left: 0%;
+    top: 0%;
+    transform: translate(-0%,-0%);
+    z-index: 5;
+    position: absolute;
+    -webkit-transition: font-weightr 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
+}
+.ifrm_titl{
+    left: 0%;
+    top: 0%;
+    font-size: 20px;
+    transform: translate(-0%,-0%);
+    z-index: 5;
+    position: absolute;
+    margin:70px 0px 0px 20px;
+}
 }
