--- a/css/expo.css
+++ b/css/expo.css
@@ -18,7 +18,7 @@ nav{
     flex-direction: column;
     -webkit-flex-direction: column;
 }
-.expo_holdb,.expo_holdc{
+.expo_holdb,.expo_holdc,.expo_holdd{
     width: 100%;
     box-sizing: border-box;
     display: flex;
@@ -28,11 +28,20 @@ nav{
     -webkit-flex-direction: row;
     -webkit-justify-content: space-between;
 }
-.expo_holdb{
+.expo_holdb,.expo_holdd{
     margin-bottom: 100px;
 }
 .expo_holdc{
     margin-bottom: 40px;
+}
+.expo_holde{
+    width:640px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-justify-content: space-between;
 }
 .expo_datediagr{
     margin-top: 80px;
@@ -56,14 +65,15 @@ nav{
 .expo_datetxtc,.expo_datetxtd{
     font-weight: 400;
     font-size: 16px;
-    width: 230px;
     line-height: 20px;
 }
 .expo_datetxtc{
     margin: 80px 150px 0px 0px;
+    width: 230px;
 }
 .expo_datetxtd{
     margin: 0px 60px 0px 0px;
+    width: 30%;
 }
 .expo_datebar{
     margin: 30px 0px 20px 0px;
@@ -115,15 +125,24 @@ nav{
 .expo_choimg{
     width: 300px;
     height: 300px;
-    filter: blur(0px);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    -webkit-filter: blur(0px);
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
+    
+}
+.expo_over{
+    height: 100%;
+    width: 100%;
+    background-color: rgba(251,118,96,0);
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    z-index: 20;
+    transform: translate(-0%,-0%);
+    -webkit-transition: background-color 0.2s ease;
+    -moz-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
 }
 .expo_chotxt{
     font-weight: 600;
@@ -134,15 +153,12 @@ nav{
     position: absolute;
     left: 50%;
     top: 50%;
+    z-index: 20;
     transform: translate(-50%,-50%);
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
+    text-align: center;
 }
-.expo_choice:hover .expo_choimg{
-    filter: blur(6px);
-    -webkit-filter: blur(6px);
+.expo_choice:hover .expo_over,.expo_choice:focus .expo_over,.expo_choice:active .expo_over{
+    background-color: rgba(251,118,96,0.4);
 }
 .mySlides,.mySlides2 {display:none}
 /* Slideshow container */
@@ -246,6 +262,206 @@ nav{
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text{font-size: 11px}
+@media only screen and (max-width: 1200px){
+    #expomain{
+    width:100%;
+}
+}
+@media only screen and (max-width: 1000px){
+    .nav_page{
+        width: 100%;
+        height: 100vh;
+        background-color: rgb(251,118,96);
+        opacity: 0;
+        top: 0;
+        left: 0;
+        z-index: 900;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        pointer-events: none;
+        display: -webkit-flex;
+        -webkit-flex-direction: column;
+        -webkit-transition: opacity 0.6s ease;
+        -moz-transition: opacity 0.6s ease;
+        -o-transition: opacity 0.6s ease;
+        transition: opacity 0.6s ease;
+    }
+    .nav_page.active{
+        opacity: 1;
+        pointer-events: all;
+        display: flex;
+        display: -webkit-flex;
+        -webkit-transition: opacity 0.4s ease;
+        -moz-transition: opacity 0.4s ease;
+        -o-transition: opacity 0.4s ease;
+        transition: opacity 0.4s ease;
+    }
+    .expo_datebar{
+    display: none;
+}
+    .expo_datetxtc{
+    margin: 80px 150px 0px 0px;
+    width: auto;
+}
+.expo_datetxtd{
+    margin: 0px 60px 0px 0px;
+    width: 40%;
+}
+    .expo_holde{
+    width:420px;
+}
+    .expo_holda{
+    width:100%;
+        box-sizing: border-box;
+        padding: 0px 40px 0px 40px;
+}
+    .expo_holdd{
+        flex-direction: column;
+        -webkit-flex-direction:column;
+    }
+    .expo_choice{
+    width: 200px;
+    height: 200px;
+}
+.expo_choimg{
+    width: 200px;
+    height: 200px;
+}
+    .expo_datetxtd{
+    margin: 0px 20px 0px 0px;
+}
+}
+@media only screen and (max-width:740px){
+    .expo_holdd{
+    margin-bottom: 0px;
+}
+    .expo_holde{
+    width:100%;
+        justify-content: center;
+        -webkit-justify-content: center;
+}
+    .expo_choice{
+    margin: 0px 10px 0px 10px;
+}
+    .expo_btxta{
+        display: none;
+    }
+    .expo_subtitl{
+    text-align: center;
+        line-height: 40px;
+}
+     .expo_datetxtc{
+    margin: 80px 100px 0px 0px;
+}
+.expo_datetxtd{
+    margin: 0px 100px 40px 0px;
+    width: auto;
+}
+    .expo_holdb,.expo_holdc{
+        flex-direction: column;
+        align-items: center;
+        -webkit-flex-direction: column;
+        -webkit-align-items: center;
+    }
+}
+@media only screen and (max-width:600px){
+    .slideshow-container {
+        margin-bottom: 40px;
+    }
+    .prev, .next{
+        padding: 6px;
+        font-size: 30px;
+    }
+    .text{
+        bottom: 40px;
+        font-size: 12px;
+    }
+    .dot{
+        height: 10px;
+        width: 10px;
+    }
+    .expo_holde{
+        justify-content: space-between;
+        -webkit-justify-content: space-between;
+}
+    .expo_choice{
+        margin: 0px 0px 0px 0px;
+    width: 160px;
+    height: 160px;
+}
+.expo_choimg{
+    width: 160px;
+    height: 160px;
+}
+    .expo_datetxtc{
+    margin: 60px 40px 0px 0px;
+}
+    .expo_datetxtd{
+    margin: 0px 40px 40px 0px;
+}
+    .expo_holda{
+        padding: 0px 30px 0px 30px;
+}
+    .expo_datediagr{
+    margin-top: 60px;
+}
+}
+@media only screen and (max-width:380px){
+    .expo_choice{
+    width: 140px;
+    height: 140px;
+}
+.expo_choimg{
+    width: 140px;
+    height: 140px;
+}
+}
+@media only screen and (max-width:340px){
+    .prev, .next{
+        padding: 4px;
+        font-size: 26px;
+    }
+    .dot{
+        height: 8px;
+        width: 8px;
+    }
+    .expo_datediagr{
+    margin-top: 40px;
+}
+    .expo_titl{
+        font-size: 26px;
+    }
+    .expo_holdc{
+        margin-bottom: 20px;
+    }
+    .expo_subtitl{
+    text-align: center;
+        font-size: 22px;
+        line-height: 32px;
+}
+    .expo_datetxtc{
+    margin: 60px 20px 0px 0px;
+}
+    .expo_datetxtd{
+    margin: 0px 20px 40px 0px;
+}
+    .expo_choice{
+    width: 120px;
+    height: 120px;
+}
+.expo_choimg{
+    width: 120px;
+    height: 120px;
+}
+}
+@media only screen and (max-height: 360px){
+    .expo_holde{
+    width:100%;
+        justify-content: center;
+        -webkit-justify-content: center;
+}
+    .expo_choice{
+    margin: 0px 10px 0px 10px;
+}
 }
