--- a/css/sprojs.css
+++ b/css/sprojs.css
@@ -25,7 +25,6 @@ nav{
 }
 .sproj_plhold{
     margin-top: 80px;
-    line-height: 22px;
     display: flex;
     flex-direction: column;
     display: -webkit-flex;
@@ -60,6 +59,7 @@ nav{
     font-size: 14px;
     font-family: poppins;
     font-weight: 400;
+    line-height: 36px;
     -webkit-transition: font-weight 0.2s ease;
     -moz-transition: font-weight 0.2s ease;
     -o-transition: font-weight 0.2s ease;
@@ -167,8 +167,104 @@ nav{
   from {opacity: .9} 
   to {opacity: 1}
 }
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+@media only screen and (max-width: 1000px){
+    .nav_page{
+        width: 100%;
+        height: 100vh;
+        background-color: rgb(251,118,96);
+        opacity: 0;
+        top: 0;
+        left: 0;
+        z-index: 900;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        pointer-events: none;
+        display: -webkit-flex;
+        -webkit-flex-direction: column;
+        -webkit-transition: opacity 0.6s ease;
+        -moz-transition: opacity 0.6s ease;
+        -o-transition: opacity 0.6s ease;
+        transition: opacity 0.6s ease;
+    }
+    .nav_page.active{
+        opacity: 1;
+        pointer-events: all;
+        display: flex;
+        display: -webkit-flex;
+        -webkit-transition: opacity 0.4s ease;
+        -moz-transition: opacity 0.4s ease;
+        -o-transition: opacity 0.4s ease;
+        transition: opacity 0.4s ease;
+    }
+    #sprojmain{
+    width: 100%;
+}
+    .sproj_hold{
+   box-sizing: border-box;
+        padding: 0px 40px 0px 40px;
+}
+.sproj_lhold{
+    display: none;
+}
+.sproj_plhold{
+    margin-top: 80px;
+    line-height: 22px;
+    display: flex;
+    flex-direction: column;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+}
+.sproj_intro{
+    width: 70%;
+    column-count: 2;
+    -webkit-column-count: 2;
+}
+.sproj_titl{
+    box-sizing: border-box;
+        padding: 0px 40px 0px 40px;
+}
+}
+@media only screen and (max-width: 600px) {
+  .dot {
+  height: 10px;
+  width: 10px;
+}
+    .prev, .next,.text {
+        font-size: 20px;
+        width: 20px;
+    }
+    .sproj_hold{
+   flex-direction: column;
+        -webkit-flex-direction: column;
+        align-items: center;
+        -webkit-align-items: center;
+}
+.sproj_plhold{
+    margin-top: 60px;
+    text-align: center;
+}
+.sproj_intro{
+    width: 100%;
+    column-count: 1;
+    -webkit-column-count: 1;
+}
+    .sproj_titl{
+    text-align: center;
+}
+}
+@media only screen and (max-width: 380px){
+    .sproj_hold{
+        padding: 0px 30px 0px 30px;
+}
+    .sproj_titl{
+        font-size: 34px;
+        padding: 0px 30px 0px 30px;
+}
+    .sproj_plhold{
+    margin-top: 40px;
+}
+    .sproj_intro{
+    margin-top: 60px;
+}
 }
