--- a/css/events.css
+++ b/css/events.css
@@ -53,7 +53,7 @@ nav{
     -webkit-flex-direction: column;
     -webkit-align-items: center;
 }
-.evesec{
+.evesec,.eveseci{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -107,4 +107,244 @@ nav{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.slideshow-container{
+    display:none;
+}
+@media only screen and (max-width: 1200px){
+    .evenhead_shirt{
+        padding: 340px 100px 140px 100px;
+    width: 100%;
+}
+}
+@media only screen and (max-width:1000px){
+    .mySlides {display:none}
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    justify-content: center;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    padding: 10px;
+    margin-top: -22px;
+    color: rgba(255,255,255,0.5);
+    font-weight: bold;
+    font-size: 50px;
+    -webkit-transition: color 0.4s ease;
+    -moz-transition: color 0.4s ease;
+    -o-transition: color 0.4s ease;
+    transition: color 0.4s ease;
+    border-radius: 0 3px 3px 0;
+    display: flex;
+    flex-direction: row;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    justify-content: center;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  color: rgba(255,255,255,1);
+}
+.dot_holder{
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-justify-content: center;
+    
+}
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 13px;
+  width: 13px;
+  margin: 0 4px;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 50%;
+  display: inline-block;
+    -webkit-transition: background-color 0.6s ease;
+    -moz-transition: background-color 0.6s ease;
+    -o-transition: background-color 0.6s ease;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: rgba(255,255,255,1);
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .9} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .9} 
+  to {opacity: 1}
+}
+    #evenmain{
+    width: 100%;
+}
+    .eve_pbox1{
+        display: none;
+    }
+    .evenhead_shirt{
+    padding: 340px 80px 140px 80px;
+}
+    .evesec{
+        box-sizing: border-box;
+        padding: 0px 80px 60px 80px;
+    }
+    .eveseci{
+        display: none;
+    }
+    .eve_txt{
+    font-size: 16px;
+    width: 100%;
+        padding-right: 20%;
+}
+    .nav_page{
+        width: 100%;
+        height: 100vh;
+        background-color: rgb(251,118,96);
+        opacity: 0;
+        top: 0;
+        left: 0;
+        z-index: 900;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        pointer-events: none;
+        display: -webkit-flex;
+        -webkit-flex-direction: column;
+        -webkit-transition: opacity 0.6s ease;
+        -moz-transition: opacity 0.6s ease;
+        -o-transition: opacity 0.6s ease;
+        transition: opacity 0.6s ease;
+    }
+    .nav_page.active{
+        opacity: 1;
+        pointer-events: all;
+        display: flex;
+        display: -webkit-flex;
+        -webkit-transition: opacity 0.4s ease;
+        -moz-transition: opacity 0.4s ease;
+        -o-transition: opacity 0.4s ease;
+        transition: opacity 0.4s ease;
+    }
+}
+@media only screen and (max-width:600px){
+    #evenhead{
+        margin-bottom: 80px;
+    }
+    .evenhead_shirt{
+    padding: 340px 40px 140px 40px;
+        align-items: center;
+        -webkit-align-items: center;
+}
+    .eve_htxt{
+        width: 100%;
+        box-sizing: border-box;
+        padding-right: 10%;
+        align-self: flex-start;
+    }
+    .eve_hstxt{
+    font-size: 12px;
+}
+    .evesec{
+        box-sizing: border-box;
+        padding: 0px 40px 60px 40px;
+    }
+    .eve_txt{
+    font-size: 16px;
+    width: 100%;
+        box-sizing: border-box;
+        padding-right: 10%;
+}
+    .prev, .next {
+    width: 20px;
+    font-size: 30px;
+}
+    .dot {
+  height: 10px;
+  width: 10px;
+}
+}
+@media only screen and (max-width:380px){
+    #evenhead{
+        margin-bottom: 60px;
+    }
+    .evenhead_shirt{
+    padding: 340px 30px 120px 30px;
+}
+    .eve_htitl{
+    font-size:36px;
+}
+    .eve_htxt{
+    font-size: 18px;
+}
+    .evesec{
+        box-sizing: border-box;
+        padding: 0px 30px 60px 30px;
+    }
+}
+@media only screen and (max-width:350px){
+    #evenhead{
+        margin-bottom: 60px;
+    }
+    .evenhead_shirt{
+    padding: 340px 30px 80px 30px;
+}
+    .eve_htitl{
+    font-size:32px;
+}
+    .eve_htxt{
+    font-size: 16px;
+}
+    .evesec{
+        box-sizing: border-box;
+        padding: 0px 30px 60px 30px;
+    }
+}
+@media only screen and (max-height: 420px){
+       .evenhead_shirt{
+    padding: 340px 80px 20px 80px;
+}
+    .eve_htitl{
+    font-size:32px;
+}
+    .eve_htxt{
+    font-size: 16px;
+} 
 }
