--- a/css/home.css
+++ b/css/home.css
@@ -124,10 +124,12 @@ nav.scroll{
     margin-right: 40px;
     background-image: url(img/faceic.svg);
 }
-#navinsta:hover, #navface:hover,#navinsta:focus, #navface:focus,#navinsta:active, #navface:active{
+#navinsta:hover, #navface:hover,{
     transform: scale(1.2,1.2);
 }
-
+#navinsta:focus, #navface:focus,#navinsta:active, #navface:active{
+    transform: scale(0.8,0.8);
+}
 .navlangs{
     box-sizing: border-box;
     padding-left: 20px;
@@ -282,6 +284,7 @@ nav.scroll{
 .playb{
     height: 100px;
     width: 100px;
+    display: block;
     background-image: url(img/playb.svg);
     background-position: center;
     background-repeat: no-repeat;
@@ -727,8 +730,8 @@ nav.scroll{
     .navburger{
         height: 70px;
         width: 50px;
-        display:flex;
-        display:-webkit-flex;
+        display:block;
+        display:-webkit-block;
         background-image: url(img/nav_burger.svg);
         background-size: contain;
         background-repeat: no-repeat;
