--- a/css/home.css
+++ b/css/home.css
@@ -339,6 +339,7 @@ nav.scroll{
     font-family: poppins;
     font-size: 60px;
     font-weight: 400;
+    cursor: pointer;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
@@ -905,7 +906,7 @@ nav.scroll{
     }
     .np_foot{
         width: 100%;
-        padding: 20px 20px 20px 20px;
+        padding: 20px 20px 60px 20px;
         bottom: 0;
         left: 0;
         right: 0;
@@ -1232,7 +1233,6 @@ nav.scroll{
 .closex{
     padding: 0px 40px 0px 40px;
     font-size: 46px;
-    cursor: pointer;
 }
     .np_back{
         height: 40px;
@@ -1453,6 +1453,9 @@ nav.scroll{
     .headdates{
     font-size: 22px;
 }
+    .np_foot{
+        padding: 20px 20px 40px 20px;
+    }
 }
 @media only screen and (max-height:580px){
     #head_shirt{
