--- a/css/expo.css
+++ b/css/expo.css
@@ -69,7 +69,7 @@ nav{
 }
 .expo_datetxtc{
     margin: 80px 150px 0px 0px;
-    width: 230px;
+    width: 34%;
 }
 .expo_datetxtd{
     margin: 0px 60px 0px 0px;
