--- a/css/proj.css
+++ b/css/proj.css
@@ -74,6 +74,7 @@ mh{
 }
 .ap{
     font-size: 16px;
+    cursor: pointer;
     font-family: poppins;
     color: rgb(251,118,96);
     font-weight: 400;
@@ -117,6 +118,7 @@ mh{
 }
 .ap2{
     font-size: 12px;
+    cursor: pointer;
     color: rgb(251,118,96);
     font-family: poppins;
     font-weight: 300;
