--- a/css/home.css
+++ b/css/home.css
@@ -1648,3 +1648,13 @@ nav.scroll{
     align-self: flex-start;
     }
 }
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+ .vid_wrap{
+    display: none;
+    }
+}
+    @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (orientation:landscape) {
+  .vid_wrap{
+    display: none;
+    }
+}
