--- a/css/proj.css
+++ b/css/proj.css
@@ -763,3 +763,13 @@ mh{
         padding: 0px 80px 0px 80px;
 }
 }
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+ .vid_wrap{
+    display: none;
+    }
+}
+    @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (orientation:landscape) {
+  .vid_wrap{
+    display: none;
+    }
+}
