new.sizes.hotfix1

--- a/css/events.css
+++ b/css/events.css
@@ -309,10 +309,10 @@
     padding: 340px 30px 120px 30px;
 }
     .eve_htitl{
-    font-size:36px;
+    font-size:34px;
 }
-    .eve_htxt{
-    font-size: 18px;
+    .eve_txt{
+    font-size: 14px;
 }
     .evesec{
         box-sizing: border-box;
