--- a/css/sprojs.css
+++ b/css/sprojs.css
@@ -261,6 +261,9 @@ nav{
         font-size: 34px;
         padding: 0px 30px 0px 30px;
 }
+    .sproj_txt{
+        font-size: 14px;
+    }
     .sproj_plhold{
     margin-top: 40px;
 }
