new.sizes.hotfix2

--- a/css/ageifrm.css
+++ b/css/ageifrm.css
@@ -146,3 +146,13 @@
     margin:70px 0px 0px 20px;
 }
 }
+@media only screen and (max-width: 380px){
+    .ifrm_date{
+    margin:40px 0px 0px 20px;
+    font-size: 14px;
+}
+    .ifrm_titl{
+    font-size: 16px;
+    margin:70px 0px 0px 20px;
+}
+}
