--- a/css/agend.css
+++ b/css/agend.css
@@ -56,7 +56,7 @@ nav{
 .age_btxt{
     width: 380px;
     font-family: Poppins;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 20px;
     margin-top: 60px;
 }
@@ -373,7 +373,17 @@ nav{
 }
 @media only screen and (max-width: 380px){
     .age_btxt{
+        font-size: 14px;
+        line-height: 20px;
+    }
+    .age_eatitl{
+        font-size: 16px;
+        margin-top: 50px;
+    }
+    .age_eatxt{
+        font-size: 12px;
+    }
+    .age_acttitl{
         font-size: 18px;
-        line-height: 24px;
     }
 }
