--- a/css/home.css
+++ b/css/home.css
@@ -836,7 +836,7 @@ nav.scroll{
     }
     .np_cont{
         width: 100%;
-        margin-top: 100px;
+        margin-top: 14%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -851,7 +851,7 @@ nav.scroll{
         color: rgb(255,255,255);
         font-weight: 400;
         font-size: 26px;
-        margin: 0px 0px 60px 0px;
+        margin: 0px 0px 40px 0px;
         -webkit-transition: font-weight 0.2s ease;
     -moz-transition: font-weight 0.2s ease;
     -o-transition: font-weight 0.2s ease;
@@ -1241,13 +1241,13 @@ nav.scroll{
         width: 60px;
     }
     .np_cont{
-        margin-top: 60px;
+        margin-top: 14%;
     }
     .np_butts{
         font-family: poppins;
         color: rgb(255,255,255);
         font-size: 20px;
-        margin: 0px 0px 40px 0px;
+        margin: 0px 0px 34px 0px;
     }
     .np_langs{
         margin: 0px 20px 0px 20px;
